Alignment fix

--- a/src/Components/IOCards/IOCards.css
+++ b/src/Components/IOCards/IOCards.css
@@ -9,12 +9,12 @@
 
 .input-card-wrapper {
   left: 150px;
-  top: 260px;
+  top: 272px;
 }
 
 .output-card-wrapper {
   right: 150px;
-  top: 260px;
+  top: 272px;
 }
 
 .io-card-header {
